packages/webassemblyjs/test/fixtures/type-errors/local-as-result/module.wast
(module (func $type-local-num-vs-num (result i64) (local i32) (get_local 0)))
